--- a/src/layouts/global.css
+++ b/src/layouts/global.css
@@ -1,7 +1,7 @@
 /*  R E S E T  */
 :root {
-  overflow-x: hidden;
-  width: 100vw;
+  /* overflow-x: hidden;
+  width: 100vw; */
   font-size: 16px;
 }
 p {
@@ -21,7 +21,7 @@ p {
 body {
   background: var(--color1);
   color: var(--color6);
-  font: 400 15px/1.3em Courier, monospace; /* Rokkitt, */
+  font: 400 15px/1.3em Courier, monospace;
   margin: 0;
   overflow-x: hidden; /* Fixes iOS scroll */
   padding: 0;
