--- a/src/layouts/colors-default.css
+++ b/src/layouts/colors-default.css
@@ -20,7 +20,8 @@
   --light: #ffffff;
   --lightish: #ffd8b7;
   /* Gradients */
-  --gradNav: linear-gradient(90deg, #ffffff, #ffffffdd, #ffffff33, transparent);
+  --gradNav: linear-gradient(90deg, #ffffff, #ffffffdd, #ffffff33, transparent),
+    radial-gradient(circle at 26% 16%, #ffffffaa, #ffffff22, transparent 26%);
   --gradBg: linear-gradient(70deg, #ffffff 30%, #fff6d8 80%, #ffbca9 100%);
   --gradButton: linear-gradient(70deg, #ffe9a24a, #ea305266);
   --gradFooter: linear-gradient(48deg, #ffffff, #ffd8b7);
@@ -65,12 +66,13 @@
     --gradButton: linear-gradient(70deg, #ea305266, #ffe9a24a);
     --gradFooter: linear-gradient(48deg, #121f26, #312536);
     --gradNav: linear-gradient(
-      90deg,
-      #121f26,
-      #121f26dd,
-      #121f2633,
-      transparent
-    );
+        90deg,
+        #121f26,
+        #121f26cc,
+        #121f2644,
+        transparent
+      ),
+      radial-gradient(circle at 26% 16%, #121f26cc, #121f2644, transparent 26%);
     --gradInvert: linear-gradient(70deg, #4c3459, #121f27);
     --lightish: #ffd8b7;
     --tint1: #121f2666; /* alpha was: .4 */
@@ -107,22 +109,24 @@
 @media (hover: hover) {
   :root {
     --gradNav: linear-gradient(
-      90deg,
-      #ffffff,
-      #ffffffcc,
-      #ffffff66,
-      transparent
-    );
+        90deg,
+        #ffffff,
+        #ffffffdd,
+        #ffffff33,
+        transparent
+      ),
+      radial-gradient(circle at 26% 16%, #ffffff, #ffffff99, transparent 26%);
   }
 }
 @media (hover: hover) and (prefers-color-scheme: dark) {
   :root {
     --gradNav: linear-gradient(
-      90deg,
-      #121f26,
-      #121f26cc,
-      #121f2666,
-      transparent
-    );
+        90deg,
+        #121f26,
+        #121f26cc,
+        #121f2644,
+        transparent
+      ),
+      radial-gradient(circle at 26% 16%, #121f26cc, #121f2644, transparent 26%);
   }
 }
