--- a/src/layouts/global.css
+++ b/src/layouts/global.css
@@ -129,17 +129,19 @@ section p :is(a:focus, a:hover) {
   background-image: var(--gradBg);
   background-repeat: no-repeat;
 }
-.half1,
-.half1_b,
-.half2,
-.half2_b {
-  color: var(--text);
-}
 .half1 h2,
 .half1_b h2,
 .half2 h2,
 .half2_b h2 {
+  color: var(--heading);
+}
+.half1 p,
+.half1_b p,
+.half2 p,
+.half2_b p {
   color: var(--text);
+  font-weight: bold;
+  text-shadow: 0 0 2em var(--glow);
 }
 section {
   border-radius: 0;
@@ -248,7 +250,7 @@ button {
   background-image: var(--gradButton);
   border: none;
   border-radius: var(--unit1);
-  color: var(--color1);
+  color: var(--textButton);
   display: inline-block;
   font-weight: bold;
   margin-bottom: 1rem;
@@ -419,6 +421,30 @@ input:-webkit-autofill {
   flex-direction: column;
   gap: var(--unit5);
 }
+.columns-3 {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-left: var(--unit8);
+  padding-right: var(--unit8);
+  text-align: left;
+  width: 100%;
+}
+.columns-3 :is(h2, h3) {
+  margin-bottom: 1em;
+  position: static;
+  rotate: unset;
+  text-align: left;
+}
+.columns-3 .column {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: var(--unit8);
+  margin-top: var(--unit8);
+  position: relative;
+}
 @media (min-width: 500px) {
   .columns-2 {
     display: flex;
@@ -430,6 +456,19 @@ input:-webkit-autofill {
   .columns-2 > * {
     flex-basis: calc(50% - var(--unit4));
     text-align: left;
+  }
+}
+@media (min-width: 620px) {
+  .columns-3 {
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    transform: skewY(22deg);
+    max-width: 1200px;
+  }
+  .columns-3 .column {
+    transform: skewY(-22deg);
+    width: calc(33.33% - var(--unit6));
   }
 }
 .pull {
