--- a/src/layouts/nav.css
+++ b/src/layouts/nav.css
@@ -1,14 +1,17 @@
 .nav {
+  left: 11px;
   position: fixed;
-  top: 10px;
+  rotate: 22deg;
+  top: -5px;
+  transform-origin: top left;
   z-index: 999;
 }
-.nav ul::before {
+.nav::before {
   background-image: var(--gradNav);
   content: "";
   display: block;
   height: 545px;
-  left: -44px;
+  left: -46px;
   overflow: hidden;
   pointer-events: none;
   position: absolute;
@@ -16,32 +19,37 @@
   transition: all 1s cubic-bezier(0, 0, 0.15, 1);
   width: 185px;
 }
-.nav:is(:hover, :focus) ul::before {
+.nav:is(:hover, :focus)::before {
   height: 1338px;
   left: -44px;
   top: -157px;
   width: 440px;
 }
+.nav .group {
+}
 .nav ul {
   display: block;
-  padding: 16px 8px 16px 64px;
+  left: 68px;
+  margin: 0;
+  padding: 0;
   position: absolute;
-  rotate: 22deg;
-  top: -17px;
-  transition: all 0.3s ease;
+  top: -14px;
+  transform-origin: top left;
 }
 .nav ul li {
   display: flex;
+  height: 24px;
 }
 .nav a {
   color: var(--color3);
   display: block;
   font-family: "Rubik", sans-serif;
+  font-size: 20px;
   font-weight: 700;
   position: relative;
   text-decoration: none;
   text-transform: lowercase;
-  transition: all 0.5s ease;
+  transition: color 0.5s ease;
 }
 .nav a.logo {
   content: ":j";
@@ -50,18 +58,54 @@
   left: 10px;
   letter-spacing: 0.3rem;
   position: absolute;
-  rotate: 22deg;
   top: 16px;
   z-index: 1;
 }
-/* .nav .devicon {
-  color: var(--color3);
-  left: 84px;
-  position: absolute;
-  rotate: 22deg;
-  top: 33px;
-  width: 40px;
-} */
+.nav .toggle {
+  display: none;
+}
+@media (max-width: 600px) {
+  .nav .group {
+    transition: all 0.2s ease;
+  }
+  .nav .toggle {
+    display: block;
+  }
+  .nav .icon {
+    color: var(--color3);
+    width: 42px;
+  }
+  .nav .open {
+    cursor: pointer;
+    opacity: 1;
+    position: absolute;
+    width: 42px;
+    z-index: 1;
+    padding: 6px 2px 2px 1px;
+  }
+  .nav.active::before {
+    height: 1578px;
+    left: -44px;
+    top: -217px;
+    width: 580px;
+  }
+  .nav.active .group {
+    left: 70px;
+    top: 4px;
+    transform: scale(3);
+    translate: 40px -13px;
+  }
+  .nav.active .open {
+    opacity: 0;
+    z-index: 0;
+  }
+  .nav.inactive ul {
+    opacity: 0;
+  }
+  .nav.active ul {
+    opacity: 1;
+  }
+}
 @media (hover: hover) {
   .nav a {
     color: var(--color3);
