--- a/src/css/colors-default.css
+++ b/src/css/colors-default.css
@@ -21,8 +21,13 @@
   --light: #ffffff;
   --lightish: #ffd8b7;
   /* Gradients */
-  --gradNav: linear-gradient(90deg, #ffffff, #ffffffdd, #ffffff33, transparent),
-    radial-gradient(circle at 26% 16%, #ffffffaa, #ffffff22, transparent 26%);
+  --gradNav: radial-gradient(
+    #ffffffcc,
+    #ffffffaa,
+    #ffffff33,
+    #ffffff11,
+    transparent 70%
+  );
   --gradBg: linear-gradient(70deg, #ffffff 30%, #fff6d8 80%, #ffbca9 100%);
   --gradButton: linear-gradient(70deg, #ffe9a24a, #ea305266);
   --gradFooter: linear-gradient(48deg, #ffffff, #ffd8b7);
@@ -75,14 +80,13 @@
     --gradBg: linear-gradient(70deg, #121f26 30%, #302a3f 80%, #692938 100%);
     --gradButton: linear-gradient(70deg, #ea305266, #ffe9a24a);
     --gradFooter: linear-gradient(48deg, #121f26, #312536);
-    --gradNav: linear-gradient(
-        90deg,
-        #121f26,
-        #121f26cc,
-        #121f2644,
-        transparent
-      ),
-      radial-gradient(circle at 26% 16%, #121f26cc, #121f2644, transparent 26%);
+    --gradNav: radial-gradient(
+      #121f26cc,
+      #121f26aa,
+      #121f2633,
+      #121f2611,
+      transparent 70%
+    );
     --gradInvert: linear-gradient(70deg, #4c3459, #121f27);
     --lightish: #ffd8b7;
     --tint1: #121f2666; /* alpha was: .4 */
@@ -120,29 +124,5 @@
   .hero,
   .hero_b::before {
     --gradBg: linear-gradient(70deg, #b22741, #dd7452);
-  }
-}
-@media (hover: hover) {
-  :root {
-    --gradNav: linear-gradient(
-        90deg,
-        #ffffff,
-        #ffffffdd,
-        #ffffff33,
-        transparent
-      ),
-      radial-gradient(circle at 26% 16%, #ffffff, #ffffff99, transparent 26%);
-  }
-}
-@media (hover: hover) and (prefers-color-scheme: dark) {
-  :root {
-    --gradNav: linear-gradient(
-        90deg,
-        #121f26,
-        #121f26cc,
-        #121f2644,
-        transparent
-      ),
-      radial-gradient(circle at 26% 16%, #121f26cc, #121f2644, transparent 26%);
   }
 }
