--- a/src/css/global.css
+++ b/src/css/global.css
@@ -42,7 +42,7 @@ body > div {
 a {
   text-decoration: none;
 }
-p a[href*="http"]::before,
+section p a[href*="http"]::before,
 a[href*="http"].button::before {
   content: ".";
   display: block;
@@ -79,7 +79,7 @@ button {
   background-color: var(--color3);
   background-image: var(--gradButton);
   border: none;
-  border-radius: var(--unit1);
+  border-radius: var(--border-radius);
   color: var(--textButton);
   display: inline-block;
   font-weight: bold;
@@ -205,7 +205,7 @@ section p :is(a:focus, a:hover) {
   text-shadow: 0 0 2em var(--glow);
 }
 section {
-  border-radius: 0;
+  border-radius: var(--border-radius);
   clear: both;
   padding-bottom: var(--unit8);
   position: relative;
@@ -261,7 +261,7 @@ section {
 .tiltR::before {
   content: "";
   display: block;
-  border-radius: var(--unit1);
+  border-radius: var(--border-radius);
   bottom: 0;
   left: 0;
   position: absolute;
@@ -373,7 +373,7 @@ textarea {
   background-color: transparent;
   outline: none;
   border: 2px solid currentColor;
-  border-radius: var(--unit2);
+  border-radius: var(--border-radius);
   box-sizing: border-box;
   color: currentColor;
   margin-bottom: 0;
@@ -510,13 +510,13 @@ input:-webkit-autofill {
   }
 }
 .pull {
-  border-radius: var(--unit1);
+  border-radius: var(--border-radius);
   box-sizing: border-box;
   padding: 0 var(--unit4);
 }
 .items span {
   background-color: var(--tint1);
-  border-radius: var(--unit1);
+  border-radius: var(--border-radius);
   color: var(--color6);
   display: inline-block;
   margin: 4px 8px 4px 0;
