--- a/src/css/heroHome.module.css
+++ b/src/css/heroHome.module.css
@@ -24,7 +24,7 @@
 }
 .heroHome a {
   border-color: transparent;
-  border-radius: 0.4vh;
+  border-radius: var(--border-radius);
   border-style: solid;
   border-width: 2px;
   display: inline-block;
