--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -8,63 +8,69 @@
 }
 /* .nav::before {
   background-image: var(--gradNav);
-  bottom: -400px;
   content: "";
-  left: -340px;
   overflow: hidden;
   pointer-events: none;
-  position: absolute;
-  right: -150px;
   rotate: -22deg;
-  top: -300px;
   transition: all 1s cubic-bezier(0, 0, 0.15, 1);
   z-index: -1;
+  
+  position: absolute;
+  top: -300px;
+  left: -340px;
+  right: -150px;
+  bottom: -400px;
 } */
 .nav::before {
   color: var(--color1);
   content: "\25b6";
   font-size: 540px;
-  left: -100px;
   pointer-events: none;
-  position: absolute;
-  filter: blur(35px);
-  top: -160px;
+  filter: blur(50px);
   transition: all 1s cubic-bezier(0, 0, 0.15, 1);
   z-index: -1;
   width: calc(100vw + 100px);
   overflow: hidden;
-  padding: 160px 0 200px;
+  padding: 200px 0 200px;
   box-sizing: border-box;
   height: 0;
-  transform: scale(1, 2);
+  transform: skewY(12deg);
+  transform-origin: top left;
+
+  position: absolute;
+  left: -100px;
+  top: -200px;
 }
 /* .nav::after {
   background-image: var(--gradNav);
-  bottom: -140px;
   content: "";
-  left: -190px;
   overflow: hidden;
   pointer-events: none;
-  position: absolute;
-  right: -120px;
   rotate: -22deg;
-  top: -140px;
   transition: all 1s cubic-bezier(0, 0, 0.15, 1);
   z-index: -1;
+  
+  position: absolute;
+  top: -140px;
+  left: -190px;
+  right: -120px;
+  bottom: -140px;
 } */
 .nav .group {
+  height: 90px;
+  rotate: 22deg;
   transform-origin: top left;
   width: 170px;
-  height: 90px;
 }
 .nav ul {
   display: block;
-  left: 68px;
   margin: 0;
   padding: 0;
+  transform-origin: top left;
+
   position: absolute;
   top: 0;
-  transform-origin: top left;
+  left: 68px;
 }
 .nav ul li {
   display: flex;
@@ -85,11 +91,12 @@
   content: ":j";
   display: block;
   font-size: 90px;
-  left: 10px;
   letter-spacing: 0.3rem;
-  position: absolute;
-  top: 31px;
   z-index: 1;
+
+  position: absolute;
+  left: 10px;
+  top: 31px;
 }
 .nav .toggle {
   display: none;
@@ -105,29 +112,9 @@
     color: var(--color3);
     width: 42px;
   }
-  .nav .open {
-    cursor: pointer;
-    opacity: 1;
-    position: absolute;
-    width: 42px;
-    z-index: 1;
-    padding: 6px 2px 2px 1px;
-  }
-  /* .nav.active::before {
-    height: 1578px;
-    left: -44px;
-    top: -217px;
-    width: 580px;
-  } */
   .nav.active::before {
     width: 580px;
   }
-  /* .nav.active .group {
-    left: 70px;
-    top: 4px;
-    transform: scale(3);
-    translate: 40px -13px;
-  } */
   .nav.active .open {
     opacity: 0;
     z-index: 0;
@@ -143,17 +130,7 @@
   .nav a {
     color: var(--color3);
   }
-  /* .nav ul:hover li a {
-    color: var(--color3);
-  } */
-  /* .nav:is(:hover, :focus)::before {
-    transform: scale(1, 3);
-  } */
   .nav a:not(.current):is(:active, :focus, :hover) {
     color: var(--accent);
   }
 }
-/* .nav ul li a:before {
-    content: "-\\0000a0";
-    left: 0px;
-  } */
