--- a/src/css/global.css
+++ b/src/css/global.css
@@ -43,7 +43,7 @@ body > div {
 a {
   text-decoration: none;
 }
-section:not(.gallery, .hero) p a[href*="http"]::before {
+section.alignable p a[href*="http"]::before {
   content: ".";
   display: block;
   float: right;
@@ -74,17 +74,17 @@ section:not(.gallery, .hero) p a[href*="http"]::before {
     0.33em -0.33em 0 currentColor, 0.3em -0.3em 0 currentColor;
   width: 1em;
 }
-section:not(.gallery, .hero):last-of-type {
+section.alignable:last-of-type {
   padding-bottom: 100px;
 }
-section:not(.gallery, .hero) p a {
+section.alignable p a {
   border-bottom: 2px solid var(--color5);
   box-sizing: border-box;
   color: currentColor;
   text-decoration: none;
   transition: all ease 0.2s;
 }
-section:not(.gallery, .hero) p :is(a:focus, a:hover) {
+section.alignable p :is(a:focus, a:hover) {
   border-bottom: 4px solid var(--color6);
 }
 .hero,
@@ -181,11 +181,15 @@ section:not(.gallery, .hero) p :is(a:focus, a:hover) {
   font-weight: bold;
   text-shadow: 0 0 2em var(--glow);
 }
-section:not(.gallery, .hero) {
+section.alignable {
   /* border-radius: var(--border-radius); */
   clear: both;
   padding-bottom: var(--unit8);
   position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.alignable {
   display: flex;
   flex-direction: column;
 }
@@ -279,10 +283,6 @@ article,
 .wide {
   max-width: 1000px;
 }
-.alignable {
-  display: flex;
-  flex-direction: column;
-}
 img.transluscent {
   mix-blend-mode: multiply;
 }
@@ -324,7 +324,7 @@ h2 + p::before {
   shape-outside: polygon(0% 0%, 100% 0%, 100% 100%);
   width: 250px;
 }
-section:not(.gallery, .hero) h2,
+section.alignable h2,
 h2.tilt {
   rotate: 22deg;
   text-align: right;
@@ -510,6 +510,7 @@ input:-webkit-autofill {
   box-sizing: border-box;
   padding: 0 var(--unit4);
 }
+.items li,
 .items span {
   background-color: var(--tint1);
   border-radius: var(--border-radius);
